src/test/ui/pattern/usefulness/match-byte-array-patterns.stderr
error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:9:9
   |
LL |         &[0x41, 0x41, 0x41, 0x41] => {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/match-byte-array-patterns.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:15:9
   |
LL |         b"AAAA" => {},
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:21:9
   |
LL |         b"AAAA" => {},
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:27:9
   |
LL |         b"AAAA" => {},
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:35:9
   |
LL |         &[0x41, 0x41, 0x41, 0x41] => {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:41:9
   |
LL |         b"AAAA" => {},
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:47:9
   |
LL |         b"AAAA" => {},
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:53:9
   |
LL |         b"AAAA" => {},
   |         ^^^^^^^

error: aborting due to 8 previous errors

